# mp2-lab2-matrix

./: CMakeLists.txt  CppProperties.json
b2/: CMakeCache.txt
build2/: CMakeCache.txt
gtest/: CMakeLists.txt
include/: CMakeLists.txt  tmatrix.h  utmatrix.h
lab2/: utmatrix.h
samples/: CMakeLists.txt  sample_matrix.cpp
sln/: sample_utmatrix.vcxproj  sample_utmatrix.vcxproj.filters
sln/vc10/: test_utmatrix.vcxproj  test_utmatrix.vcxproj.filters
sln/vc10/Debug/: CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  cl.command.1.tlog  gtest.lastbuildstate  lib.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  sample_utmatrix.ilk  test_utmatrix.ilk  vc110.idb
test/: CMakeLists.txt  test_tmatrix.cpp  test_tvector.cpp
